# ainto-app

./: .gitignore  LICENSE  Makefile  README.md  appcast.xml  build.sh
.github/workflows/: ci.yml  release.yml
AintoApp/: Package.resolved  Package.swift  project.yml
AintoApp/AintoCoreBridge/: ainto_core.h  module.modulemap
AintoApp/Config/: base.xcconfig  debug.xcconfig  release.xcconfig
AintoApp/Resources/: Info.plist
AintoApp/Sources/App/: AintoApp.swift  AppDelegate.swift  ResourceBundle.swift  Version.swift
AintoApp/Sources/Bridge/: SearchViewModel.swift
AintoApp/Sources/Services/: ClipboardMonitor.swift  HotkeyManager.swift  TextExpander.swift  TrayManager.swift
AintoApp/Sources/Views/: AICommandView.swift  ActionPanel.swift  ClaudeView.swift  ClipboardTableView.swift  ClipboardView.swift  MainView.swift  SearchPanel.swift  SettingsView.swift  SnippetView.swift
Scripts/ci/: bump-version.sh  deploy-appcast.sh  validate-release-version.sh  version-to-build-number.sh
Scripts/codesign/: generate_selfsigned_certificate.sh  import_certificate.sh  setup_local.sh
ainto-core/: Cargo.toml
ainto-core/src/: ai_commands.rs  claude.rs  clipboard_store.rs  config.rs  discovery.rs  ffi.rs  lib.rs  ranking.rs  search.rs  snippets.rs
